<resources>
    <string name="app_name">InforCIE</string>
    <string name="name_log">Please sign in to continue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bottom__home">Bottom_Home</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="Search">Search</string>
    <string name="Feature">Feature</string>
    <string name="News">News</string>
    <string name="Society">Society</string>
    <string name="Studentstory">Student story</string>
    <string name="Events">Events</string>
    <string name="Education">Education</string>
    <string name="Projects">Projects</string>
    <string name="Notifications">Notifications</string>
    <string name="Setting">Setting</string>
    <string name="Schoolarship">Schoolarship</string>
    <string name="About">About us</string>
    <string name="noti">Notification</string>
    <string name="language">Languages</string>
    <string name="Contact">Contact</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="ver">Version 1.0</string>

    <string name="Date">May20,20</string>
    <string name="Time">1h ago</string>
    <string name="GT">The global ecomic impact of Covid</string>
    <string name="namsv">Nguyễn Yến Nhi</string>
    <string name="msv">B17DCPt122</string>
    <string name="ABOUT">ABOUT US</string>
    <string name="see">SEE ALL</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>