<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="HELLO, YEN NHI! "
                    android:textColor="@color/colorlogin"
                    android:textStyle="bold"
                    android:layout_margin="10dp"
                    android:textSize="22dp"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:paddingTop="4dp"
                    android:background="@drawable/search"
                    android:layout_marginRight="13dp"
                    android:layout_marginLeft="13dp"
                    android:paddingBottom="4dp"
                    android:gravity="center_vertical">

                    <EditText
                        android:id="@+id/edt_search_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="text"
                        android:hint="@string/Search"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:lines="1"
                        android:textColorHint="@color/colorLogin2"
                        android:textColor="@color/colorEdt"
                        android:textSize="15sp"
                        android:background="@android:color/transparent"/>

                    <ImageView
                        android:id="@+id/iv_clear_text"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginRight="8dp"
                        android:adjustViewBounds="true"
                        android:src="@drawable/searchh"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="8dp"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="157dp"
                    android:src="@drawable/group1503x"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="8dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="334dp"
                    android:background="@drawable/search"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Feature"
                        android:textSize="19dp"
                        android:textStyle="bold"
                        android:layout_margin="18dp"
                        android:textColor="@color/colorlogin"/>
                    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingLeft="9dp"
                        android:orientation="horizontal">
                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/listitem"
                            android:textSize="9dp"
                            android:text="@string/Education"/>
                        <TextView
                            android:layout_width="5dp"
                            android:layout_height="wrap_content"/>
                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/listitem"
                            android:textSize="9dp"
                            android:text="@string/Projects"/>
                        <TextView
                            android:layout_width="5dp"
                            android:layout_height="wrap_content"/>
                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/listitem"
                            android:textSize="9dp"
                            android:text="@string/Schoolarship"/>
                        <TextView
                            android:layout_width="5dp"
                            android:layout_height="wrap_content"/>
                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/listitem"
                            android:textSize="9dp"
                            android:text="@string/About"/>
<!--                        <com.google.android.material.tabs.TabLayout-->
<!--                            android:id="@+id/activity_dashboard_tablayout"-->
<!--                            android:layout_width="match_parent"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:background="@color/colorSearch">-->

<!--                            <com.google.android.material.tabs.TabItem-->
<!--                                android:id="@+id/tabitem1"-->
<!--                                android:layout_width="wrap_content"-->
<!--                                android:layout_height="match_parent"-->
<!--                                android:background="@color/colorlogin"-->
<!--                                android:text="New Feed" />-->

<!--                            <com.google.android.material.tabs.TabItem-->
<!--                                android:id="@+id/tabitem2"-->
<!--                                android:layout_width="wrap_content"-->
<!--                                android:background="@color/colorlogin"-->
<!--                                android:layout_height="match_parent"-->
<!--                                android:text="News" />-->

<!--                        </com.google.android.material.tabs.TabLayout>-->

                    </LinearLayout>
                </LinearLayout>
                <ListView
                    android:id="@+id/lvXuLyVanBan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="190dp" />


            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
